<resources>
    <string name="app_name">BorroWise</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_duedate">Due:</string>
    <string name="lbl_daysLeft">Days Left:</string>
    <string name="lbl_daysOverdue">Days Overdue:</string>
    <string name="lbl_retdate">Return Date:</string>
    <string name="lbl_status">Status:</string>
    <string name="lbl_rating">Rating: </string>

    <string name="lbl_start">START DATE</string>
    <string name="lbl_due">DUE DATE</string>
    <string name="lbl_ret">RETURN DATE</string>
    <string name="lbl_notif_settings">NOTIFICATION SETTINGS</string>

    <string name="lbl_item">Item</string>
    <string name="lbl_money">Money</string>
    <string name="lbl_all">All</string>

    <string name="btn_borrowed">Borrowed</string>
    <string name="btn_lent">Lent</string>

    <string name="btn_lost">Lost</string>
    <string name="btn_returned">Returned</string>

    <!-- added strings -->
    <string name="lbl_dayleft">day/s left</string>
    <string name="lbl_overdue">day/s overdue</string>
    <!-- addition only up to this point -->
    <string-array name="array_spinner">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_add_transaction">Add a Transaction</string>

    <string name="title_activity_view_user">People</string>
    <string name="title_activity_home">Add Transaction</string>
    <string name="title_activity_transaction">Transactions</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_search">Search</string>
    <string name="currency">PHP</string>
    <string name="title_activity_view_user_profile">User Profile</string>

    <!-- added activity titles -->
    <string name="title_activity_view_transaction">Transaction</string>
    <string name="title_activity_view_history">History</string>

    <!-- delete transaction dialog text -->
    <string name="delete_dialog">Are you sure you want to delete transaction?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <!-- add transaction dialog text -->
    <string name="add_transaction_dialog">What kind of transaction do you want to add?</string>
    <string name="dialog_item">Item</string>
    <string name="dialog_money">Money</string>

    <string name="payment_error_dialog">The payment is greater than the balance needed to be paid!</string>

    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>

    <string name="lent_to">LENT TO </string>
    <string name="borrowed_from">BORROWED FROM </string>
    <string name="total_amt">ORIGINAL </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
