<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.shayanetan.borrowise.Fragments.ViewBorrowedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_TBorrowed_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="@dimen/filter_button_size"
            android:text="@string/lbl_all"
            android:textSize="12dp"
            android:textColor="@color/primaryColor"
            android:background="@drawable/round_button"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_TBorrowed_item"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_height="@dimen/filter_button_size"
            android:text="@string/lbl_item"
            android:textSize="12dp"
            android:textColor="@color/primaryColor"
            android:background="@drawable/round_button"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn_TBorrowed_money"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/filter_button_size"
            android:text="@string/lbl_money"
            android:textSize="12dp"
            android:textColor="@color/primaryColor"
            android:background="@drawable/round_button"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerview_transaction_borrowed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
