<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.shayanetan.borrowise.Fragments.AddMoneyFragment">

    <RelativeLayout
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/primaryColor"
        android:id="@+id/card_money">
        <TextView
            android:id="@+id/tv_lbl_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textSize="25dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/et_AMAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/tv_lbl_currency"
            android:layout_marginTop="10dp"
            android:hint="0.00"
            android:padding="20dp"
            android:textColorHint="@android:color/white"
            android:textSize="45sp"
            android:textCursorDrawable = "@null"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"/>

    </RelativeLayout>
<!--
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_MoneyToItem"
        android:src="@drawable/ic_item"
        app:fabSize="normal"
        app:backgroundTint="@color/secondaryColor"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight = "true" />
-->
    <ScrollView
        android:id="@+id/money_content_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_money"
        android:layout_above="@+id/layout_add_money_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/text_primaryColor"
                    android:src="@drawable/ic_account"/>

                <AutoCompleteTextView
                    android:id="@+id/atv_AMPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter person name"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/subheading_label">
                    <requestFocus />
                </AutoCompleteTextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_money_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/text_primaryColor"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/caption_label"
                        android:text="@string/lbl_start"/>
                    <TextView
                        android:id="@+id/tv_money_startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subheading_label"
                        android:text="Today"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_money_endDate"
                android:layout_below="@id/layout_money_startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_calendar"
                    android:tint="@color/text_primaryColor"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/caption_label"
                        android:text="@string/lbl_due"/>
                    <TextView
                        android:id="@+id/tv_money_endDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/subheading_label"
                        android:text="Today"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/layout_money_notif_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="@dimen/navigation_icon_size"
                    android:layout_height="@dimen/navigation_icon_size"
                    android:layout_marginRight="15dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/text_primaryColor"
                    android:src="@drawable/ic_notif"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_notif_settings"
                        android:layout_gravity="center_vertical"
                        android:textSize="@dimen/caption_label"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <LinearLayout
                            android:id="@+id/layout_money_notif_days_before"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tv_money_notif_days_before"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" days before due date "/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/layout_money_notif_days_before"
                            android:layout_centerHorizontal="true">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="at "/>
                            <TextView
                                android:id="@+id/tv_money_notif_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="12:00 pm" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@id/layout_add_money_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_AMBorrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_borrowed"
            android:textSize="@dimen/button_label"
            android:background="@color/accentBlueColor"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btn_AMLend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_lent"
            android:textSize="@dimen/button_label"
            android:background="@color/accentBlueColor"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>
